* feature: WYSIWYG Preview.. * feature: modul installer * fix: charset mixup bei buttons -> texte & namen in lang Dateien * Hilfe angepaßt
git-svn-id: http://svn.gn2-host4.de:8080/public/markitup/trunk@27 2f1e30e2-e202-4c38-a896-b52656e6da9c

--- a/lang/de_de_utf8.lang
+++ b/lang/de_de_utf8.lang
@@ -1,41 +1,50 @@
-markitup_name_aligncenter = Zentriert - davor leere Zeile
-markitup_name_alignjustify = Blocksatz - davor leere Zeile
-markitup_name_alignleft = Linksbündig - davor leere Zeile
-markitup_name_alignright = Rechtsbündig - davor leere Zeile
-markitup_name_blockquote = Zitat
-markitup_name_bold = Fett
-markitup_name_clean = Textile Markup entfernen
-markitup_name_code = Quellcode
-markitup_name_h1 = Überschrift 1
-markitup_name_h2 = Überschrift 2
-markitup_name_h3 = Überschrift 3
-markitup_name_h4 = Überschrift 4
-markitup_name_h5 = Überschrift 5
-markitup_name_h6 = Überschrift 6
-markitup_name_image = Bild
-markitup_name_italic = Kursiv
-markitup_name_linkextern = Externer Link
-markitup_name_linkintern = Interner Link
-markitup_name_linkmailto = Mailto-Link
-markitup_name_linkmedia = Datei verlinken
-markitup_name_listbullet = Liste - ungeordnet
-markitup_name_listnumeric = Liste - geordnet
-markitup_name_preview = Voransicht
-markitup_name_stroke = Durchstrichen
-markitup_name_subscript = Tiefgestellt
-markitup_name_superscript = Hochgestellt
-markitup_name_table = Tabelle
+markitup_name_h1                = Überschrift 1. Ordnung
+markitup_name_h2                = Überschrift 2. Ordnung
+markitup_name_h3                = Überschrift 3. Ordnung
+markitup_name_h4                = Überschrift 4. Ordnung
+markitup_name_h5                = Überschrift 5. Ordnung
+markitup_name_h6                = Überschrift 6. Ordnung
+markitup_placeholder_h1         = Überschrift 1. Ordnung hier..
+markitup_placeholder_h2         = Überschrift 2. Ordnung hier..
+markitup_placeholder_h3         = Überschrift 3. Ordnung hier..
+markitup_placeholder_h4         = Überschrift 4. Ordnung hier..
+markitup_placeholder_h5         = Überschrift 5. Ordnung hier..
+markitup_placeholder_h6         = Überschrift 6. Ordnung hier..
 
-markitup_linkextern_text_1 = Link eingeben
-markitup_linkextern_text_2 = Linktext hier
+markitup_name_bold              = Fett
+markitup_name_italic            = Kursiv
+markitup_name_stroke            = Durchstrichen
+markitup_name_superscript       = Hochgestellt
+markitup_name_subscript         = Tiefgestellt
 
-markitup_linkmedia_text_1 = Beschreibung hier
+markitup_name_aligncenter       = Zentriert - davor leere Zeile
+markitup_name_alignjustify      = Blocksatz - davor leere Zeile
+markitup_name_alignleft         = Linksbündig - davor leere Zeile
+markitup_name_alignright        = Rechtsbündig - davor leere Zeile
 
-markitup_linkmailto_text_1 = E-Mail-Link eingeben
-markitup_linkmailto_text_2 = Linktext hier
+markitup_name_table             = Tabelle
+markitup_table_headline         = Überschrift
+markitup_table_how_many_cols    = Wieviele Spalten?
+markitup_table_how_many_rows    = Wieviele Reihen?
+markitup_table_col              = Spalte
+markitup_table_row              = Zeile
+markitup_name_listbullet        = Liste - ungeordnet
+markitup_name_listnumeric       = Liste - geordnet
 
-markitup_table_headline = Überschrift
-markitup_table_how_many_cols = Wieviele Spalten?
-markitup_table_how_many_rows = Wieviele Reihen?
-markitup_table_col = Spalte
-markitup_table_row = Zeile
+markitup_name_image             = Bild
+markitup_name_linkmedia         = Datei verlinken
+markitup_linkmedia_text_1       = Beschreibung hier
+markitup_name_linkintern        = Interner Link
+markitup_name_linkextern        = Externer Link
+markitup_linkextern_text_1      = Link eingeben
+markitup_linkextern_text_2      = Linktext hier
+markitup_name_linkmailto        = Mailto-Link
+markitup_linkmailto_text_1      = E-Mail-Link eingeben
+markitup_linkmailto_text_2      = Linktext hier
+
+markitup_name_blockquote        = Zitat
+markitup_placeholder_blockquote = Zitat hier...
+markitup_name_code              = Quellcode
+
+markitup_name_clean             = Textile Markup entfernen
+markitup_name_preview           = Voransicht
